Testing blender models for level geometry

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1939,15 +1939,20 @@ SpotLight.Cooking=True
 SpotLight.HLOD=True
 SpotLight.WorldPartition=True
 SpotLight.Actor=True
+SpotLightComponent.TransformCommon=True
+SpotLightComponent.Light=True
+SpotLightComponent.Rendering=True
+SpotLightComponent.Lightmass=True
+SpotLightComponent.Performance=True
+SpotLightComponent.LightFunction=True
+SpotLightComponent.Light Profiles=True
+SpotLightComponent.DistanceFieldShadows=True
+SpotLightComponent.RayTracing=True
+SpotLightComponent.Tags=True
+SpotLightComponent.Cooking=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Mainmenu/Main_Menu_WIdget.Main_Menu_WIdget
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/Mainmenu/MenuGameMode.MenuGameMode
-OpenAssetsAtExit=/Game/Blueprints/PauseMenu/Pause_Menu_Widget.Pause_Menu_Widget
-OpenAssetsAtExit=/Game/HealthPickUp/HealthPickUp_BP.HealthPickUp_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1980,23 +1985,23 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [DetailPropertyExpansion]
-WorldSettings=
-Info=
+WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 AssetViewerSettings="\"Object\" "
 SkeletalMesh="\"Object\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
 LODInfoUILayout="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
@@ -2206,7 +2211,7 @@ GameplayDebuggerUserSettings="\"Object\" "
 GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
-StaticMesh="\"Object\" "
+StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
 SplineComponent="\"Object\" "
 CableComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 StaticMeshSocket="\"Object\" "
@@ -2247,6 +2252,11 @@ MaterialExpressionTextureBase="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionReflectionVectorWS="\"Object\" "
 MaterialExpressionConstant3Vector="\"Object\" "
+SpotLightComponent="\"Object\" "
+PointLightComponent="\"Object\" "
+LocalLightComponent="\"Object\" "
+LightComponent="\"Object\" "
+LightComponentBase="\"Object\" "
 
 [Directories2]
 UNR=../../../../../../Users/petel/OneDrive - Dundalk Institute of Technology/Desktop/cagaca/SE_GA_CA/joint_SE_GA_CA/Content
@@ -3167,6 +3177,14 @@ Cascade.TimeStamp=2022.09.20-17.47.04
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2022.09.20-17.47.14
 DistCurveEditor.LastCompileMethod=Unknown
+NewLevelDialog.TimeStamp=2022.09.20-17.47.35
+NewLevelDialog.LastCompileMethod=Unknown
+TurnkeyIO.TimeStamp=2022.09.20-17.47.51
+TurnkeyIO.LastCompileMethod=Unknown
+UATHelper.TimeStamp=2022.09.20-17.47.51
+UATHelper.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2022.09.20-17.47.49
+TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -3200,7 +3218,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/HDR
+ContentBrowserDrawer.SelectedPaths=/Game/LevelGeometry
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3271,9 +3289,14 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [PlacementMode]
+RecentlyPlaced=/Game/LevelGeometry/iterior_test4.iterior_test4;
+RecentlyPlaced=/Game/LevelGeometry/iterior_test3.iterior_test3;
+RecentlyPlaced=/Game/LevelGeometry/iterior_test1.iterior_test1;
+RecentlyPlaced=/Game/LevelGeometry/iterior_test2.iterior_test2;
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Game/LevelGeometry/iterior_test_Cube.iterior_test_Cube;
 RecentlyPlaced=/Game/HDR/spinner1.spinner1;
 RecentlyPlaced=/Game/HDR/bounce.bounce;
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Blueprints/Obstacles/sphere_model.sphere_model;
 RecentlyPlaced=/Game/Blueprints/Obstacles/spinner_Cube.spinner_Cube;
 RecentlyPlaced=/Game/HealthPickUp/HealthPickUp_BP.HealthPickUp_BP;
@@ -3286,11 +3309,6 @@ RecentlyPlaced=/Game/Blueprints/ziplineend5.ziplineend5;
 RecentlyPlaced=/Game/Blueprints/ziplineend4.ziplineend4;
 RecentlyPlaced=/Game/Blueprints/ziplineend3.ziplineend3;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/door2_BP.door2_BP;
-RecentlyPlaced=/Game/Characters/Enemy/Test/Test_enemy.Test_enemy;
-RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
-RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI;
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -3453,26 +3471,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/HDR/Space_Skybox
-MRUItem1=/Game/HDR/space_scape
-MRUItem2=/Game/Blueprints/Obstacles/sphere_model
-MRUItem3=/Game/HealthPickUp/HealthPickUp_BP
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem5=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
-MRUItem6=/Game/Blueprints/Mainmenu/MenuGameMode
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem8=/Game/Blueprints/Mainmenu/Main_Menu_WIdget
-MRUItem9=/Game/Blueprints/Zipline_Particles
-MRUItem10=/Game/Characters/Player/Animations/Model/neo10_Skeleton
-MRUItem11=/Game/ThirdPerson/Widgets/Timer_Widget
-MRUItem12=/Game/Characters/Player/Animations/Neo_Blueprint
-MRUItem13=/Game/Blueprints/Zipline_Interface
-MRUItem14=/Game/Blueprints/ziplineend7
-MRUItem15=/Game/Blueprints/Ziplineactor
-MRUItem16=/Game/Blueprints/Zipline_Actor
-MRUItem17=/Game/Characters/Player/Animations/Motions/Hanging_Idle
-MRUItem18=/Game/Blueprints/ZiplineInteract_BPI
-MRUItem19=/Game/Blueprints/ziplineend6
+MRUItem0=/Game/LevelGeometry/iterior_test2
+MRUItem1=/Game/HDR/Space_Skybox
+MRUItem2=/Game/HDR/space_scape
+MRUItem3=/Game/Blueprints/Obstacles/sphere_model
+MRUItem4=/Game/HealthPickUp/HealthPickUp_BP
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem6=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
+MRUItem7=/Game/Blueprints/Mainmenu/MenuGameMode
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem9=/Game/Blueprints/Mainmenu/Main_Menu_WIdget
+MRUItem10=/Game/Blueprints/Zipline_Particles
+MRUItem11=/Game/Characters/Player/Animations/Model/neo10_Skeleton
+MRUItem12=/Game/ThirdPerson/Widgets/Timer_Widget
+MRUItem13=/Game/Characters/Player/Animations/Neo_Blueprint
+MRUItem14=/Game/Blueprints/Zipline_Interface
+MRUItem15=/Game/Blueprints/ziplineend7
+MRUItem16=/Game/Blueprints/Ziplineactor
+MRUItem17=/Game/Blueprints/Zipline_Actor
+MRUItem18=/Game/Characters/Player/Animations/Motions/Hanging_Idle
+MRUItem19=/Game/Blueprints/ZiplineInteract_BPI
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -3545,6 +3563,11 @@ Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 /Game/ob_course_joint_ca_3.ob_course_joint_ca_3:PersistentLevel.ob_course_joint_ca_3=1
 /Game/mainmenumap.mainmenumap:PersistentLevel.mainmenumap=1
 /Game/HDR/space_scape.space_scape=1
+/Game/Blueprints/Mainmenu/Main_Menu_WIdget.Main_Menu_WIdget=1
+/Game/Blueprints/Mainmenu/MenuGameMode.MenuGameMode=1
+/Game/HealthPickUp/HealthPickUp_BP.HealthPickUp_BP=1
+/Game/HDR/Space_Skybox.Space_Skybox=1
+/Game/LevelGeometry/iterior_test2.iterior_test2=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3735,4 +3758,69 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [CascadeEditor]
 LightDir=P=-45.000000 Y=180.000000 R=0.000000
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=0
+bPlatformUsed[50]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
 
