Niagra particle effect

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -237,7 +237,7 @@ NavMeshBoundsVolume=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2
 PostProcessVolume=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Test_enemy_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
 K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
-door2_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+door2_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 BP_ThirdPersonGameMode_C=
 SceneComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 StaticMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
@@ -276,6 +276,7 @@ blade_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_Vari
 spin_bp_rev_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 Launchpad_2_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 PrimitiveComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
+Obstacle_Blueprint_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca_3
@@ -2020,6 +2021,7 @@ OpenAssetsAtExit=/Game/LevelGeometry/iterior_test6.iterior_test6
 OpenAssetsAtExit=/Game/LevelGeometry/iterior_test7.iterior_test7
 OpenAssetsAtExit=/Game/HealthPickUp/HealthPickUp_BP.HealthPickUp_BP
 OpenAssetsAtExit=/Game/Door_BP.Door_BP
+OpenAssetsAtExit=/Game/LevelGeometry/arena.arena
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2068,7 +2070,7 @@ FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 AssetViewerSettings="\"Object\" "
 SkeletalMesh="\"Object\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[2]\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[5]\" "
 LODInfoUILayout="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
@@ -2278,7 +2280,7 @@ GameplayDebuggerUserSettings="\"Object\" "
 GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" "
 SlateThemeManager="\"Object\" "
-StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[2]\" "
+StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[5]\" "
 SplineComponent="\"Object\" "
 CableComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 StaticMeshSocket="\"Object\" "
@@ -3287,7 +3289,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/LevelGeometry
+ContentBrowserDrawer.SelectedPaths=/Game/Emitters
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -3358,6 +3360,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [PlacementMode]
+RecentlyPlaced=/Game/LevelGeometry/door1.door1;
 RecentlyPlaced=/Game/LevelGeometry/arena.arena;
 RecentlyPlaced=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI;
 RecentlyPlaced=/Game/LevelGeometry/iterior_test7.iterior_test7;
@@ -3367,7 +3370,6 @@ RecentlyPlaced=/Game/LevelGeometry/floor.floor;
 RecentlyPlaced=/Game/LevelGeometry/interior_door.interior_door;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/LevelGeometry/iterior_test6.iterior_test6;
-RecentlyPlaced=/Game/LevelGeometry/door1.door1;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_SpawnPosition.BP_SpawnPosition;
 RecentlyPlaced=/Game/Blueprints/Checkpoint_BP.Checkpoint_BP;
 RecentlyPlaced=/Game/LevelGeometry/iterior_test5.iterior_test5;
@@ -3540,26 +3542,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/LevelGeometry/arena
-MRUItem1=/Game/LevelGeometry/iterior_test7
-MRUItem2=/Game/LevelGeometry/iterior_test6
-MRUItem3=/Game/HealthPickUp/HealthPickUp_BP
-MRUItem4=/Game/door2_BP
-MRUItem5=/Game/Door_BP
-MRUItem6=/Game/spin_bp
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_SpawnPosition
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem10=/Game/Blueprints/Checkpoint_BP
-MRUItem11=/Game/Blueprints/SaveGame_BP
-MRUItem12=/Game/LevelGeometry/iterior_test2
-MRUItem13=/Game/HDR/Space_Skybox
-MRUItem14=/Game/HDR/space_scape
-MRUItem15=/Game/Blueprints/Obstacles/sphere_model
-MRUItem16=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
-MRUItem17=/Game/Blueprints/Mainmenu/MenuGameMode
-MRUItem18=/Game/Blueprints/Mainmenu/Main_Menu_WIdget
-MRUItem19=/Game/Blueprints/Zipline_Particles
+MRUItem0=/Game/Emitters/Win_Emitter
+MRUItem1=/Game/LevelGeometry/arena
+MRUItem2=/Game/LevelGeometry/iterior_test7
+MRUItem3=/Game/LevelGeometry/iterior_test6
+MRUItem4=/Game/HealthPickUp/HealthPickUp_BP
+MRUItem5=/Game/door2_BP
+MRUItem6=/Game/Door_BP
+MRUItem7=/Game/spin_bp
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_SpawnPosition
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem11=/Game/Blueprints/Checkpoint_BP
+MRUItem12=/Game/Blueprints/SaveGame_BP
+MRUItem13=/Game/LevelGeometry/iterior_test2
+MRUItem14=/Game/HDR/Space_Skybox
+MRUItem15=/Game/HDR/space_scape
+MRUItem16=/Game/Blueprints/Obstacles/sphere_model
+MRUItem17=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
+MRUItem18=/Game/Blueprints/Mainmenu/MenuGameMode
+MRUItem19=/Game/Blueprints/Mainmenu/Main_Menu_WIdget
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
