Niagra confetti implemented, triggers when players reach end of level

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -277,6 +277,8 @@ spin_bp_rev_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_V
 Launchpad_2_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 PrimitiveComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 Obstacle_Blueprint_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
+BP_Win_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
+NiagaraActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/ob_course_joint_ca_3
@@ -2013,6 +2015,33 @@ PointLight.Cooking=True
 PointLight.HLOD=True
 PointLight.WorldPartition=True
 PointLight.Actor=True
+NiagaraActor.TransformCommon=True
+NiagaraActor.Materials=True
+NiagaraActor.Niagara=True
+NiagaraActor.Activation=True
+NiagaraActor.Lighting=True
+NiagaraActor.Attachment=True
+NiagaraActor.Randomness=True
+NiagaraActor.Parameters=True
+NiagaraActor.Compilation=True
+NiagaraActor.HLOD=True
+NiagaraActor.Rendering=True
+NiagaraActor.Navigation=True
+NiagaraActor.Tags=True
+NiagaraActor.Cooking=True
+NiagaraActor.Replication=True
+NiagaraActor.WorldPartition=True
+NiagaraActor.Actor=True
+BP_Win_C.Tick=True
+BP_Win_C.Replication=True
+BP_Win_C.Rendering=True
+BP_Win_C.Collision=True
+BP_Win_C.Actor=True
+BP_Win_C.Input=True
+BP_Win_C.HLOD=True
+BP_Win_C.WorldPartition=True
+BP_Win_C.Events=True
+BP_Win_C.TransformCommon=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -2022,6 +2051,7 @@ OpenAssetsAtExit=/Game/LevelGeometry/iterior_test7.iterior_test7
 OpenAssetsAtExit=/Game/HealthPickUp/HealthPickUp_BP.HealthPickUp_BP
 OpenAssetsAtExit=/Game/Door_BP.Door_BP
 OpenAssetsAtExit=/Game/LevelGeometry/arena.arena
+OpenAssetsAtExit=/Game/Emitters/Win_Emitter.Win_Emitter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2061,11 +2091,11 @@ WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 AssetViewerSettings="\"Object\" "
@@ -3360,6 +3390,8 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [PlacementMode]
+RecentlyPlaced=/Game/Emitters/BP_Win.BP_Win;
+RecentlyPlaced=/Game/Emitters/Win_Emitter_System.Win_Emitter_System;
 RecentlyPlaced=/Game/LevelGeometry/door1.door1;
 RecentlyPlaced=/Game/LevelGeometry/arena.arena;
 RecentlyPlaced=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI;
@@ -3378,8 +3410,6 @@ RecentlyPlaced=/Game/LevelGeometry/iterior_test4.iterior_test4;
 RecentlyPlaced=/Game/LevelGeometry/iterior_test3.iterior_test3;
 RecentlyPlaced=/Game/LevelGeometry/iterior_test1.iterior_test1;
 RecentlyPlaced=/Game/LevelGeometry/iterior_test2.iterior_test2;
-RecentlyPlaced=/Game/LevelGeometry/iterior_test_Cube.iterior_test_Cube;
-RecentlyPlaced=/Game/HDR/spinner1.spinner1;
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -3542,26 +3572,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Emitters/Win_Emitter
-MRUItem1=/Game/LevelGeometry/arena
-MRUItem2=/Game/LevelGeometry/iterior_test7
-MRUItem3=/Game/LevelGeometry/iterior_test6
-MRUItem4=/Game/HealthPickUp/HealthPickUp_BP
-MRUItem5=/Game/door2_BP
-MRUItem6=/Game/Door_BP
-MRUItem7=/Game/spin_bp
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_SpawnPosition
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem11=/Game/Blueprints/Checkpoint_BP
-MRUItem12=/Game/Blueprints/SaveGame_BP
-MRUItem13=/Game/LevelGeometry/iterior_test2
-MRUItem14=/Game/HDR/Space_Skybox
-MRUItem15=/Game/HDR/space_scape
-MRUItem16=/Game/Blueprints/Obstacles/sphere_model
-MRUItem17=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
-MRUItem18=/Game/Blueprints/Mainmenu/MenuGameMode
-MRUItem19=/Game/Blueprints/Mainmenu/Main_Menu_WIdget
+MRUItem0=/Game/Emitters/BP_Win
+MRUItem1=/Game/Emitters/Win_Emitter
+MRUItem2=/Game/LevelGeometry/arena
+MRUItem3=/Game/LevelGeometry/iterior_test7
+MRUItem4=/Game/LevelGeometry/iterior_test6
+MRUItem5=/Game/HealthPickUp/HealthPickUp_BP
+MRUItem6=/Game/door2_BP
+MRUItem7=/Game/Door_BP
+MRUItem8=/Game/spin_bp
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_SpawnPosition
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem12=/Game/Blueprints/Checkpoint_BP
+MRUItem13=/Game/Blueprints/SaveGame_BP
+MRUItem14=/Game/LevelGeometry/iterior_test2
+MRUItem15=/Game/HDR/Space_Skybox
+MRUItem16=/Game/HDR/space_scape
+MRUItem17=/Game/Blueprints/Obstacles/sphere_model
+MRUItem18=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
+MRUItem19=/Game/Blueprints/Mainmenu/MenuGameMode
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
