SFX and health adjustments

--- a/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/joint_SE_GA_CA/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,BlendSpace1D.BlendSample
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 BP_ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,
-K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
+K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 Enemy_AI_ABP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,
 MovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
@@ -262,7 +262,7 @@ ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,Parti
 Pause_Menu_Widget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 PlayerController=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Main_Menu_WIdget_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
-HealthPickUp_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,
+HealthPickUp_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 SaveGame_BP_C=
 Checkpoint_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
 PlayerStart=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.KickAnimMontage,PropertyWrapper.DefaultValueCategory.KickAnimMontage,K2Node_VariableGet.DefaultValueCategory.Object Types,CapsuleComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Kick,InputSettings.Bindings.ActionMappings.Takedown,InputSettings.Bindings.ActionMappings.Slide,InputSettings.Bindings.ActionMappings.Vault,BoxComponent.Collision.Collision,
@@ -2101,6 +2101,9 @@ OpenAssetsAtExit=/Game/ob_course_joint_ca_3.ob_course_joint_ca_3:PersistentLevel
 OpenAssetsAtExit=/Game/spin_bp.spin_bp
 OpenAssetsAtExit=/Game/Emitters/BP_Win.BP_Win
 OpenAssetsAtExit=/Game/Blueprints/WinScreen/WinScreen_Widget.WinScreen_Widget
+OpenAssetsAtExit=/Game/StarterContent/Audio/SE_Sounds/BG_Music_Cue.BG_Music_Cue
+OpenAssetsAtExit=/Game/Characters/Enemy/BP_Enemy_AI.BP_Enemy_AI
+OpenAssetsAtExit=/Game/HealthPickUp/HealthPickUp_BP.HealthPickUp_BP
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -3632,26 +3635,26 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Audio/SE_Sounds/BG_Music_Cue
-MRUItem1=/Game/Blueprints/WinScreen/WinScreen_Widget
-MRUItem2=/Game/Emitters/BP_Win
-MRUItem3=/Game/spin_bp
-MRUItem4=/Game/Characters/Enemy/BP_Enemy_AI
-MRUItem5=/Game/Emission_Mat
-MRUItem6=/Game/Blueprints/Obstacles/EnergySphere_Mat
-MRUItem7=/Game/Blueprints/Obstacles/sphere_model1
-MRUItem8=/Game/Obstacle_Blueprint
-MRUItem9=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
-MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem11=/Game/Door_BP
-MRUItem12=/Game/door2_BP
-MRUItem13=/Game/HDR/spinner1
-MRUItem14=/Game/Blueprints/Obstacles/crusher1
-MRUItem15=/Game/Blueprints/Obstacles/crusher
-MRUItem16=/Game/blade_BP
-MRUItem17=/Game/spin_bp_rev
-MRUItem18=/Game/ThirdPerson/Widgets/Timer_Widget
-MRUItem19=/Game/Characters/Player/Animations/Motions/Robot_Hip_Hop_Dance
+MRUItem0=/Game/HealthPickUp/HealthPickUp_BP
+MRUItem1=/Game/Characters/Enemy/BP_Enemy_AI
+MRUItem2=/Game/StarterContent/Audio/SE_Sounds/BG_Music_Cue
+MRUItem3=/Game/Blueprints/WinScreen/WinScreen_Widget
+MRUItem4=/Game/Emitters/BP_Win
+MRUItem5=/Game/spin_bp
+MRUItem6=/Game/Emission_Mat
+MRUItem7=/Game/Blueprints/Obstacles/EnergySphere_Mat
+MRUItem8=/Game/Blueprints/Obstacles/sphere_model1
+MRUItem9=/Game/Obstacle_Blueprint
+MRUItem10=/Game/Blueprints/PauseMenu/Pause_Menu_Widget
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem12=/Game/Door_BP
+MRUItem13=/Game/door2_BP
+MRUItem14=/Game/HDR/spinner1
+MRUItem15=/Game/Blueprints/Obstacles/crusher1
+MRUItem16=/Game/Blueprints/Obstacles/crusher
+MRUItem17=/Game/blade_BP
+MRUItem18=/Game/spin_bp_rev
+MRUItem19=/Game/ThirdPerson/Widgets/Timer_Widget
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
